Database validation and Password encryption

--- a/ei.wdseljava.onlineinvoice/src/main/resources/config-dev.properties
+++ b/ei.wdseljava.onlineinvoice/src/main/resources/config-dev.properties
@@ -18,7 +18,7 @@ playwright.browser=chromium   # Options: chromium, firefox, webkit
 login.url=https://payments-qa.nonprodcde.wpp.whitecoat.com.au/login
 # Login credentials
 login.username=Joseph_vandermeer@worksafe.vic.gov.au
-login.password=WSVtest1!
+login.password=ENC(Jyl3CDGlIKVxMT6dfzdRxA==)
 
 
 # Test Data Files
@@ -34,13 +34,17 @@ driver.path=src/test/resources/drivers
 
 # Oracle Database Configuration (for DB Data Driven Tests)
 # Database Configuration for Oracle Autonomous Database (Oracle ADB)
-db.url=jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCPS)(HOST=adb.ap-melbourne-1.oraclecloud.com)(PORT=1522)))(CONNECT_DATA=(SERVICE_NAME=g07847320e1f788_autselwebjavext_high.adb.oraclecloud.com))(SECURITY=(SSL_SERVER_DN_MATCH=yes)))
+#db.url=jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCPS)(HOST=adb.ap-melbourne-1.oraclecloud.com)(PORT=1522)))(CONNECT_DATA=(SERVICE_NAME=g07847320e1f788_autselwebjavext_high.adb.oraclecloud.com))(SECURITY=(SSL_SERVER_DN_MATCH=yes)))
 
 # Database credentials
+#db.username=ADMIN
+#db.password=Mypassi30#29#
+
+db.url=jdbc:oracle:thin:@spuxcn0205vm04-vip.services.workcover.vic.gov.au:1530/UAT1STEMP
+db.username=UAT1S_TPC2
+db.password=ENC(7APXz0hhJlktjUacXp1Udg==)
 
 
-db.username=ADMIN
-db.password=Mypassi30#29#
 
 # API Configuration (for API tests using RestAssured)
 api.host=https://api.example.com
