--- a/ei.wdseljava.onlineinvoice/src/main/resources/config.properties
+++ b/ei.wdseljava.onlineinvoice/src/main/resources/config.properties
@@ -3,7 +3,7 @@ login.url=https://payments-qa.nonprodcde.wpp.whitecoat.com.au/login
 
 # Login credentials
 login.username=Joseph_vandermeer@worksafe.vic.gov.au
-login.password=WSVtest1!
+login.password=ENC(Jyl3CDGlIKVxMT6dfzdRxA==)
 
 # Test Data Files
 testdata.excel.path=src/test/resources/test-data/excel-data.xlsx
@@ -24,9 +24,9 @@ driver.path=src/test/resources/drivers
 
 # Database credentials
 
-db.url=jdbc:oracle:thin:@spuxcn0203-vip.services.workcover.vic.gov.au:1530/UAT1STEMP
+db.url=jdbc:oracle:thin:@spuxcn0205vm04-vip.services.workcover.vic.gov.au:1530/UAT1STEMP
 db.username=UAT1S_TPC2
-db.password=T9c2_nxv_zjN
+db.password=ENC(7APXz0hhJlktjUacXp1Udg==)
 
 # API Configuration (for API tests using RestAssured)
 api.host=https://api.example.com
